# keyrunner

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  InfoBar.cpp  InfoBar.h  KeyRunner.cpp  KeyRunner.h  Level.cpp  Level.h  Makefile.am  README  README.md  configure.ac  main.cpp
.snapcraft/: travis_snapcraft.cfg
docs/: ubuntupkg
font/: Makefile.am
img/: Makefile.am
level/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  35  4  5  6  7  8  9  Makefile.am  blank
snap/: snapcraft.yaml
snap/gui/: keyrunner.desktop
src/: Animation.cpp  Animation.h  Animation.hpp  AnimationFactory.cpp  AnimationFactory.hpp  AnimationType.h  AnimationType.hpp  ButtonLayer.cpp  ButtonLayer.hpp  ButtonLayerBuilder.cpp  ButtonLayerBuilder.hpp  ConveyorAnimation.cpp  ConveyorAnimation.h  ConveyorAnimation.hpp  Direction.h  Direction.hpp  EditInfoBarLayer.cpp  EditInfoBarLayer.hpp  EditRootLayer.hpp  GridLayer.cpp  GridLayer.hpp  InfoBar.cpp  InfoBar.h  InfoBar.hpp  InfoBarLayer.cpp  InfoBarLayer.hpp  InfoBarPos.hpp  KeyRunner.cpp  KeyRunner.h  KeyRunner.hpp  Layer.cpp  Layer.hpp  Level.cpp  Level.h  Level.hpp  LevelLoader.cpp  LevelLoader.h  LevelLoader.hpp  LevelManager.cpp  LevelManager.hpp  (+27 more)
src/controller/: BaseController.cpp  BaseController.hpp  BoardController.cpp  BoardController.hpp  Controller.cpp  Controller.hpp  Display.cpp  Display.hpp  DisplayController.cpp  DisplayController.hpp  EditController.cpp  EditController.hpp  EditorController.cpp  EditorController.hpp  GameController.cpp  GameController.hpp  GameManager.cpp  GameManager.hpp  GameOverController.cpp  GameOverController.hpp  GameWinController.cpp  GameWinController.hpp  KeyRunner.cpp  KeyRunner.hpp  OptionController.cpp  OptionController.hpp  Options.cpp  Options.hpp  PlayController.cpp  PlayController.hpp  TitleScreenController.cpp  TitleScreenController.hpp  main.cpp
src/game/: Direction.hpp  KeyRunner.cpp  KeyRunner.hpp  LevelManager.cpp  LevelManager.hpp  Options.cpp  State.hpp
src/gui/: AnimationFactory.cpp  AnimationFactory.hpp  ConveyorAnimation.cpp  ConveyorAnimation.hpp  EditInfoBarLayer.cpp  EditInfoBarLayer.hpp  EditRootLayer.cpp  GridLayer.cpp  GridLayer.hpp  InfoBarLayer.hpp  PlayInfoBarLayer.cpp  PlayInfoBarLayer.hpp  PlayRootLayer.cpp  RootLayer.hpp  TileLayer.cpp  TileLayer.hpp  TileSelectorLayer.cpp  TileSelectorLayer.hpp
src/model/: AnimationTypeFactory.cpp  AnimationTypeFactory.hpp  BaseBoardEntity.cpp  BaseBoardEntity.hpp  BaseModel.cpp  BaseModel.hpp  BinaryLevelManager.cpp  BinaryLevelManager.hpp  Board.cpp  Board.hpp  BoardEntity.hpp  BoardEntityType.hpp  BoardModel.cpp  BoardModel.hpp  ButtonModel.cpp  ButtonModel.hpp  Coordinate.cpp  Coordinate.hpp  Direction.hpp  EditorBoardModel.cpp  EditorBoardModel.hpp  EditorModel.cpp  EditorModel.hpp  GameModel.cpp  GameModel.hpp  GameOverModel.cpp  GameOverModel.hpp  GameWinModel.cpp  GameWinModel.hpp  HitBox.hpp  HitBoxType.cpp  HitBoxType.hpp  HoverBehavior.hpp  JsonLevelManager.cpp  JsonLevelManager.hpp  LevelManager.cpp  LevelManager.hpp  Model.hpp  OptionModel.cpp  OptionModel.hpp  (+13 more)
src/uitk/: Animation.cpp  Animation.hpp  AnimationData.cpp  AnimationData.hpp  BaseView.cpp  BaseView.hpp  ButtonLayer.cpp  ButtonLayer.hpp  ButtonLayerBuilder.cpp  ButtonLayerBuilder.hpp  ButtonView.cpp  ButtonView.hpp  Display.cpp  Display.hpp  HorizontalAlignment.hpp  ImageView.cpp  ImageView.hpp  LabelView.cpp  LabelView.hpp  Layer.cpp  Layer.hpp  MenuView.cpp  MenuView.hpp  RectangleView.cpp  RectangleView.hpp  SpriteSheet.cpp  SpriteSheet.hpp  VerticalAlignment.hpp  View.hpp
src/view/: AnimationFactory.cpp  AnimationFactory.hpp  AnimationType.hpp  BoardView.cpp  BoardView.hpp  ConveyorAnimation.cpp  ConveyorAnimation.hpp  EditInfoBarLayer.cpp  EditInfoBarLayer.hpp  EditInfoBarView.cpp  EditInfoBarView.hpp  EditRootLayer.hpp  EditorBoardView.cpp  EditorBoardView.hpp  GridLayer.cpp  GridLayer.hpp  InfoBarLayer.cpp  InfoBarLayer.hpp  InfoBarPos.hpp  LevelNumberView.cpp  LevelNumberView.hpp  PlayInfoBarLayer.cpp  PlayInfoBarLayer.hpp  PlayInfoBarView.cpp  PlayInfoBarView.hpp  PlayRootLayer.hpp  RootLayer.cpp  RootLayer.hpp  TileLayer.cpp  TileLayer.hpp  TileSelectorLayer.cpp  TileSelectorLayer.hpp  TimerView.cpp  TimerView.hpp
svg/: README
